Fixed issue with button overlapping the dropdown menu

--- a/src/index.css
+++ b/src/index.css
@@ -163,7 +163,6 @@ body {
       width:250px;
       position: fixed;
       top: 150px;
-      z-index:5;
   }
 }
 
